Closed
Bug 750501
Opened 14 years ago
Closed 14 years ago
fix build failure in nsDOMClassInfo.cpp due to missing nsIDOMMediaStream.h when MOZ_MEDIA is disabled
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: aceman, Assigned: aceman)
Details
Attachments
(1 file)
|
1020 bytes,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
mozilla/dom/base/nsDOMClassInfo.cpp:312:31: fatal error: nsIDOMMediaStream.h: file or directory does not exist.
Attachment #619698 -
Flags: review?(bzbarsky)
Comment 2•14 years ago
|
||
Comment on attachment 619698 [details] [diff] [review]
patch
r=me
Attachment #619698 -
Flags: review?(bzbarsky) → review+
Keywords: checkin-needed
Comment 3•14 years ago
|
||
Comment 4•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•