Bug 750501 - Fix build failure in nsDOMClassInfo.cpp due to missing nsIDOMMediaStream.h when MOZ_MEDIA is disabled. r=bz